# timer

./: CMakeLists.txt  README.md  bindings.cpp  bindings.h  bindings.json  bindings.yaml  entrymodel.cpp  entrymodel.h  logging.h  main.cpp  stopwatch.cpp  stopwatch.h  timer-controls.pro  timer.cpp  timer.h  timer_db.h  timerprogram.cpp  timerprogram.h
cmake/: Findrqbg.cmake  WrapCargo.cmake
qml/: EditableCell.qml  main.qml  qml.qrc
rust/: Cargo.toml  start-cargo.sh
rust/src/: comms.rs  database.rs  implementation.rs  interface.rs  lib.rs  schema.rs
schema/: schema.qrc  timer.sql
ui/: main.qml
